<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_gray_light"
    tools:context="com.taggroup.www.darzeeco.Utils.ContectUs">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_contect"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/AppMainTheme"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

<LinearLayout
    android:id="@+id/customer_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/toolbar_contect"
    android:orientation="vertical">

<TextView
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/customer_care"
    android:textSize="25sp"
    android:textStyle="bold"
    android:textColor="@color/color_black"/>

<TextView
    android:id="@+id/term_text"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/care_resource_text"
    android:textSize="20sp"
    android:paddingLeft="35dp"
    android:textColorHighlight="@color/colorAccent" />

    <TextView
        android:id="@+id/contect_text"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linksite3"
        android:textSize="20sp"
        android:paddingLeft="35dp"
        android:textColorHighlight="@color/colorAccent"/>

    <TextView
        android:id="@+id/service_text"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite"
        android:textSize="20sp"
        android:paddingLeft="35dp"
        android:textColorHighlight="@color/colorAccent"/>

    <TextView
        android:id="@+id/privacy_text"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosite2"
        android:textSize="20sp"
        android:paddingLeft="35dp"
        android:textColorHighlight="@color/colorAccent"/>







</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_layout"
        android:orientation="vertical">

        <TextView
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CONTECT US"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/color_black"/>


        <TextView
            android:id="@+id/contectNo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="20sp"
            android:paddingLeft="35dp"
            android:drawableLeft="@drawable/ic_phone_android"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/contect_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_mail_outline"
            android:gravity="center_vertical"
            android:paddingLeft="35dp"
            android:paddingTop="10dp"
            android:text="@string/info_darzee_co"
            android:textColor="@drawable/color"
            android:textSize="20sp" />
        <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timing_care"
            android:textSize="20sp"
            android:paddingLeft="35sp"
            android:drawableLeft="@drawable/ic_access_time"
            android:gravity="center_vertical"
            />


    </LinearLayout>


</RelativeLayout>
